<resources>
    <string name="app_name">TgtMoviesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">back button</string>
    <string name="backgroundImage">backgroundImage</string>
    <string name="cast_and_crew"><![CDATA[Cast & Crew]]></string>
    <string name="your_favourite_movies_and_tv_shows"><![CDATA[Your favourite Movies & Tv Shows]]></string>
    <string name="rated_movies_and_tv_shows"><![CDATA[Rated Movies & Tv Shows]]></string>
    <string name="set_light_and_dark_theme"><![CDATA[Set Light & Dark Theme]]></string>
    <string name="already_have_account">already have account?</string>
    <string name="do_not_have_account">Don\'t have account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
</resources>