<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    android:orientation="vertical"
    tools:context=".application.presentation.fragments.movies.MovieDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/headLineColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:contentDescription="@string/back_button"
            android:focusable="true"
            android:foreground="@drawable/ripple_animation"
            android:padding="10dp"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/headTitle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="movieTitle"
            android:textSize="26sp" />

        <ImageView
            android:id="@+id/favourites"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:contentDescription="@string/back_button"
            android:focusable="true"
            android:foreground="@drawable/ripple_animation"
            android:padding="10dp"
            android:src="@drawable/favourite_empty" />

        <ImageView
            android:id="@+id/rateMovie"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:contentDescription="@string/back_button"
            android:focusable="true"
            android:foreground="@drawable/ripple_animation"
            android:padding="10dp"
            android:src="@drawable/star_border" />

        <ImageView
            android:id="@+id/bookmark"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:contentDescription="@string/back_button"
            android:focusable="true"
            android:foreground="@drawable/ripple_animation"
            android:padding="10dp"
            android:src="@drawable/bookmark_border" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/detailsScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView

                android:id="@+id/backgroundImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/backgroundImage"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/posterImage"
                android:layout_width="70pt"
                android:layout_height="180dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="-16dp"
                android:src="@color/green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/backgroundImage" />

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-16dp"
                android:text="movieTitle"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/posterImage"
                app:layout_constraintTop_toBottomOf="@+id/backgroundImage" />

            <RatingBar

                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:rating="5"
                android:theme="@style/customRatingBar"
                app:layout_constraintStart_toEndOf="@+id/posterImage"
                app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

            <TextView
                android:id="@+id/ratingCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:text="(danskdna)"
                android:textColor="@color/green"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/ratingBar"
                app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

            <ImageView
                android:id="@+id/star"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/star_filled"
                app:layout_constraintStart_toEndOf="@+id/ratingCount"
                app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

            <TextView
                android:id="@+id/avgRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:text="8.0"
                android:textColor="@color/green"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/star"
                app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/genreRecycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/posterImage"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar"
                tools:itemCount="1"

                tools:listitem="@layout/search_item" />

            <TextView
                android:id="@+id/movieAboutInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="movieAbout info"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/posterImage"
                app:layout_constraintTop_toBottomOf="@+id/genreRecycler" />

            <TextView
                android:id="@+id/collection"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="30dp"
                android:text="Collection"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieAboutInfo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/collectionRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/collection"
                tools:itemCount="1"
                tools:listitem="@layout/movie_item_long" />

            <TextView
                android:id="@+id/cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="18dp"
                android:text="@string/cast_and_crew"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/collectionRecyclerView" />

            <TextView
                android:id="@+id/seeCastAndCrew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="See All>"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cast" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/castRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast"
                tools:itemCount="1"
                tools:listitem="@layout/movie_item_default" />

            <TextView
                android:id="@+id/videos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="Videos"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/castRecycler" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/videoRecyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/videos"
                tools:itemCount="1"
                tools:listitem="@layout/movie_item_default" />

            <TextView
                android:id="@+id/information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="Information"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/videoRecyclerview" />

            <TextView
                android:id="@+id/recommendedMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="Recommended"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/information" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommendedRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recommendedMovies"
                tools:itemCount="1"
                tools:listitem="@layout/movie_item_default" />

            <TextView
                android:id="@+id/seeRecommended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="See All>"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/recommendedMovies" />

            <TextView
                android:id="@+id/similarMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="Recommended"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recommendedRecycler" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similarRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/similarMovies"
                tools:itemCount="1"
                tools:listitem="@layout/movie_item_default" />

            <TextView
                android:id="@+id/seeSimilarMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="See All>"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/similarMovies" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</LinearLayout>